--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primereact": "^9.6.2",
     "quill": "^1.3.7",
     "react": "^17.0.2",
+    "react-calendar": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.14.1",
