--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.41.1",
     "chart.js": "^4.3.3",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
     "quill": "^1.3.7",
     "react": "^17.0.2",
-    "react-chartjs-2": "^5.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.14.1",
