--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.41.1",
+    "axios": "^1.5.0",
     "chart.js": "^4.3.3",
+    "moment": "^2.29.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.8.2",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
