--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.41.1",
+    "axios": "^1.5.0",
     "chart.js": "^4.3.3",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
