--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "recharts": "^2.7.3",
     "styled-components": "^5.3.11",
