--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.41.1",
     "axios": "^1.5.0",
     "chart.js": "^4.3.3",
+    "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
@@ -32,6 +33,7 @@
     "react-big-calendar": "^1.8.2",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.1.2",
