--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.5.0",
     "chart.js": "^4.3.3",
     "dotenv": "^16.3.1",
+    "formik": "^2.4.4",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
@@ -35,15 +37,18 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.3.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.7.4",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "recharts": "^2.7.3",
     "styled-components": "^5.3.11",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
